exports[`ErrorMsg component snapshot renders basic required data with htmlFor 1`] = `
<label
  className="error_1pg0y0x"
  htmlFor="Login-email">
  <i
    className="icon_1w16ibx fa fa-exclamation-triangle" />
  Something went wrong.
</label>
`;

exports[`ErrorMsg component snapshot renders basic required data without htmlFor 1`] = `
<p
  className="error_1pg0y0x">
  <i
    className="icon_1w16ibx fa fa-exclamation-triangle" />
  Something went wrong.
</p>
`;

exports[`ErrorMsg component snapshot renders with additional styles 1`] = `
<p
  className="error_1pg0y0x-o_O-additional_1433df3">
  <i
    className="icon_1w16ibx fa fa-exclamation-triangle" />
  Something went wrong.
</p>
`;
